# parlatorium

./: .gitignore  DESIGN.md  HANDOFF.md  README.md  pyproject.toml  room.yaml  tokenizer.pin
environment/: tablica-pies.txt
room/: __main__.py  broker.py  config.py  ledger.py  messages.py  panel.py  preamble.py  presence.py  prompt.py  redact.py  report.py  sejf.py  state.py  tokenizer.py  transcript.py  webpanel.py
room/adapters/: base.py  echo.py  klaris.py  kord.py
tests/: test_adapters.py  test_broker.py  test_ledger.py  test_presence_report_web.py  test_sejf.py  test_transcript_redact.py
topics/: dancelab-regula-setu.txt
