[project]
name = "ai-room"
version = "0.1.0"
description = "Broker Pokoju AI — Klaris i Kord, lustro weneckie Jana"
requires-python = ">=3.12"
dependencies = [
    "pyrage>=1.3.0",
    "pyyaml>=6.0",
    "tiktoken>=0.7",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
